--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -4,9 +4,10 @@
     android:id="@+id/card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
     card_view:cardCornerRadius="4dp"
-    android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground">
 
     <LinearLayout
@@ -17,9 +18,8 @@
         <com.etsy.android.grid.util.DynamicHeightImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:src="@drawable/sample" />
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop" />
 
         <TextView
             android:id="@+id/name"
@@ -29,7 +29,7 @@
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:fontFamily="sans-serif"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textColor="@android:color/black"
             android:text="Something something"/>
 
