--- a/app/src/main/res/layout/item_preview_pic.xml
+++ b/app/src/main/res/layout/item_preview_pic.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
-    android:orientation="vertical">
+    xmlns:wheel="http://schemas.android.com/apk/res-auto">
+
+    <com.pnikosis.materialishprogress.ProgressWheel
+        android:id="@+id/progress_bar"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        wheel:matProg_barColor="@color/colorPrimary"
+        wheel:matProg_progressIndeterminate="true" />
 
     <ImageView
         android:id="@+id/image"
@@ -11,4 +18,4 @@
         android:layout_height="match_parent"
         android:scaleType="fitCenter"/>
 
-</LinearLayout>
+</FrameLayout>
