--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -6,6 +6,13 @@
     android:clickable="true"
     tools:context="io.b1ackr0se.carrental.activity.GalleryActivity">
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="8dp" />
+
+
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
@@ -16,16 +23,20 @@
         android:textColor="@android:color/white"
         android:textSize="18sp" />
 
-    <ImageView
+    <FrameLayout
         android:id="@+id/close_button"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@drawable/ic_close_white_24dp"
         android:layout_margin="8dp"
-        android:clickable="true"
-        android:background="?android:attr/selectableItemBackground"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        android:background="?android:attr/selectableItemBackground">
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_close_white_24dp" />
+    </FrameLayout>
 
     <TextView
         android:id="@+id/page"
@@ -36,12 +47,5 @@
         android:paddingRight="8dp"
         android:text="1 of 3"
         android:textColor="@android:color/white" />
-
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="8dp"/>
 
 </RelativeLayout>
