--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -52,6 +52,7 @@
                 android:layout_marginTop="2dp"
                 android:textSize="14sp"
                 android:fontFamily="sans-serif"
+                android:textColor="@color/colorAccent"
                 android:text="1.120.000 VND"/>
         </LinearLayout>
 
